[gd_scene load_steps=15 format=3 uid="uid://cx3e8xgqro54g"]

[ext_resource type="Script" path="res://Scripts/enemy_slime.gd" id="1_jnqbx"]
[ext_resource type="Texture2D" uid="uid://wpkrtmxnxusl" path="res://Assests/Idle-Run (44x30).png" id="2_oun5x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xu1od"]
atlas = ExtResource("2_oun5x")
region = Rect2(0, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mxua"]
atlas = ExtResource("2_oun5x")
region = Rect2(44, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3a1x"]
atlas = ExtResource("2_oun5x")
region = Rect2(88, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtjdp"]
atlas = ExtResource("2_oun5x")
region = Rect2(132, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_51ssi"]
atlas = ExtResource("2_oun5x")
region = Rect2(176, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnx41"]
atlas = ExtResource("2_oun5x")
region = Rect2(220, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qnba"]
atlas = ExtResource("2_oun5x")
region = Rect2(264, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_03fna"]
atlas = ExtResource("2_oun5x")
region = Rect2(308, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpeot"]
atlas = ExtResource("2_oun5x")
region = Rect2(352, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e5sb"]
atlas = ExtResource("2_oun5x")
region = Rect2(396, 0, 44, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_lsgvt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu1od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mxua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3a1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtjdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51ssi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnx41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qnba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03fna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpeot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e5sb")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvnva"]
size = Vector2(84, 79)

[node name="Enemy_Slime" type="Node2D"]
script = ExtResource("1_jnqbx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_lsgvt")
animation = &"idle"
autoplay = "idle"
frame = 6
frame_progress = 0.412529

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_jvnva")

[node name="Timer" type="Timer" parent="Area2D"]

[node name="RayCast2D_Left" type="RayCast2D" parent="."]
target_position = Vector2(-56, 0)

[node name="RayCast2D_Right" type="RayCast2D" parent="."]
target_position = Vector2(56, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Area2D/Timer" to="." method="_on_timer_timeout"]
